--- a/argonOneV5Linear/Dockerfile
+++ b/argonOneV5Linear/Dockerfile
@@ -1,4 +1,4 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/base/amd64:9.1.7
+ARG BUILD_FROM
 # hadolint ignore=DL3006
 FROM $BUILD_FROM
 
@@ -6,7 +6,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 ENV LANG C.UTF-8
 WORKDIR /data
 
-RUN  apk add i2c-tools=4.2-r0 --no-cache;
+RUN apk update && apk add --no-cache i2c-tools
 
 COPY run.sh /
 RUN chmod a+x /run.sh
