--- a/argonOne/config.yaml
+++ b/argonOne/config.yaml
@@ -1,6 +1,6 @@
 name: ArgonOne Active Cooling
 image: adamoutler/{arch}-hassosargonone
-version: 30a
+version: "0.30.0"
 slug: argon_one_temp
 description: Actively keeping your Argon One cool.
 arch:
