--- a/argonOneClassic/config.yaml
+++ b/argonOneClassic/config.yaml
@@ -1,5 +1,5 @@
 name: ArgonOne Active Linear Cooling - Classic
-version: 30a
+version: "0.30.0"
 slug: argon_one_temp_linear_linear
 description: Actively keeping your Argon One cool.
 arch:
