--- a/argonOneV3Linear/config.yaml
+++ b/argonOneV3Linear/config.yaml
@@ -1,5 +1,5 @@
 name: ArgonOne V3 Active Linear Cooling
-version: 30a
+version: "0.30.0"
 slug: argon_one_v3_temp_linear
 description: Actively keeping your ArgonOne V3 cool.
 arch:
